--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
             <canvas id="confetti-canvas"></canvas>
         </section>
 
-        <!-- Happy Birthday Song Audio -->
-        <audio id="happy-bday-song" preload="auto">
-            <source src="Prince/Happy Bday.mp3" type="audio/mpeg">
+        <!-- Happy Birthday Song Audio (ABCD2 - Aww Tera Happy Bday) -->
+        <audio id="happy-bday-song" preload="auto" loop>
+            <source src="01Happy Bday.mp3" type="audio/mpeg">
         </audio>
 
     </main>
